--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
+absl-py==2.1.0
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
-Django==4.2.16
-gunicorn==23.0.0
-packaging==24.1
+Django==5.1.3
+grpcio==1.67.1
+jax==0.3.25
+jaxlib==0.3.15
+numpy==1.24.3
+opt_einsum==3.4.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+plotly==5.24.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+scipy==1.14.1
+six==1.16.0
 sqlparse==0.5.1
+tenacity==9.0.0
 typing_extensions==4.12.2
-plotly==5.17.0
-pandas==2.1.1
-
+tzdata==2024.2
